# workshop

./: .gitignore  LICENSE.txt  Makefile  Makefile.am  README.rst  autogen.sh  configure.ac  meson.build  meson_options.txt
.github/workflows/: build.yml
debian/: .gitignore  changelog  cm4all-cron.dirs  cm4all-cron.install  cm4all-cron.postinst  cm4all-cron.service  cm4all-workshop-control.install  cm4all-workshop-database.install  cm4all-workshop-dev.install  cm4all-workshop-doc.install  cm4all-workshop-migrate.install  cm4all-workshop.default  cm4all-workshop.dirs  cm4all-workshop.init  cm4all-workshop.install  cm4all-workshop.pkla  cm4all-workshop.postinst  cm4all-workshop.postrm  cm4all-workshop.rules  cm4all-workshop.service  cm4all-workshop.sysusers  cm4all-workshop.tmpfiles  cm4all-workshop.triggers  control  copyright  cron.conf  rules  workshop.conf
doc/: Makefile  conf.py  cron.rst  index.rst  meson.build  workshop.xml
sql/: cronjobs.sql  cronresults.sql  jobs.sql
src/: AllocatorPtr.cxx  AllocatorPtr.hxx  BinaryValue.hxx  CaptureBuffer.cxx  CaptureBuffer.hxx  CgroupAccounting.cxx  CgroupAccounting.hxx  CommandLine.cxx  CommandLine.hxx  Config.cxx  Config.hxx  DatabaseConnection.cxx  DatabaseConnection.hxx  DatabaseError.hxx  DatabaseGlue.cxx  DatabaseGlue.hxx  DatabaseNotify.hxx  DatabaseResult.cxx  DatabaseResult.hxx  DynamicParamWrapper.hxx  EmailService.cxx  EmailService.hxx  Event.cxx  Event.hxx  Expand.cxx  Expand.hxx  Hook.cxx  Hook.hxx  Instance.cxx  Instance.hxx  Job.cxx  Job.hxx  Library.cxx  Library.hxx  Migrate.cxx  NsQrelayConnect.cxx  NsQrelayConnect.hxx  Operator.cxx  Operator.hxx  PGQueue.cxx  (+75 more)
src/control/: Client.cxx  Crc.hxx  Handler.hxx  Protocol.hxx  Server.cxx  Server.hxx
src/cron/: CalculateNextRun.cxx  CalculateNextRun.hxx  CommandLine.cxx  CommandLine.hxx  Config.cxx  Config.hxx  CurlOperator.cxx  CurlOperator.hxx  Handler.hxx  Instance.cxx  Instance.hxx  Job.hxx  Main.cxx  Notification.cxx  Notification.hxx  Operator.cxx  Operator.hxx  Partition.cxx  Partition.hxx  Queue.cxx  Queue.hxx  Result.cxx  Result.hxx  Schedule.cxx  Schedule.hxx  SpawnOperator.cxx  SpawnOperator.hxx  Sticky.cxx  Sticky.hxx  Workplace.cxx  Workplace.hxx
src/curl/: Global.cxx  Global.hxx  Request.cxx  Request.hxx
src/event/: Base.hxx
src/io/: LineParser.cxx  LineParser.hxx  TextFile.cxx  TextFile.hxx
src/pg/: AsyncConnection.cxx  Connection.cxx  Connection.hxx  Error.hxx  Notify.hxx  ParamWrapper.hxx  Result.hxx  ResultIterator.hxx
src/spawn/: Config.hxx  Direct.cxx  Launch.cxx  NamespaceOptions.cxx  NamespaceOptions.hxx  Prepared.hxx  mount_list.cxx  mount_list.hxx
src/system/: Error.hxx  SetupProcess.cxx  SetupProcess.hxx  fd_util.c  fd_util.h
src/time/: Calendar.hxx  Convert.cxx  Convert.hxx  ISO8601.cxx  ISO8601.hxx  Math.cxx  Math.hxx
src/translation/: CronClient.cxx  CronClient.hxx  CronGlue.cxx  CronGlue.hxx  Features.hxx  Handler.hxx  Marshal.hxx  Receive.cxx  Receive.hxx  Request.hxx  Response.cxx  Send.cxx  Send.hxx  SpawnClient.cxx  SpawnClient.hxx
src/util/: RangeBitSet.hxx  StringUtil.cxx  StringUtil.hxx  Tokenizer.cxx  Tokenizer.hxx
src/workshop/: Config.cxx  Config.hxx  ControlChannelHandler.hxx  ControlChannelListener.hxx  ControlChannelServer.cxx  ControlChannelServer.hxx  Job.cxx  Job.hxx  Library.hxx  LogBridge.cxx  LogBridge.hxx  MultiLibrary.cxx  MultiLibrary.hxx  Operator.cxx  Operator.hxx  PGQueue.cxx  PGQueue.hxx  Partition.cxx  Partition.hxx  Plan.hxx  PlanLibrary.cxx  PlanLoader.cxx  PlanLoader.hxx  PlanUpdate.cxx  ProgressReader.cxx  ProgressReader.hxx  Queue.cxx  Queue.hxx  RateLimit.cxx  RateLimit.hxx  RunJob.cxx  StatxTimestamp.hxx  SyslogBridge.cxx  SyslogBridge.hxx  Workplace.cxx  Workplace.hxx
systemd/: cm4all-workshop.service  run.sh
t/: .gitignore  TestCronSchedule.cxx  TestExpand.cxx  http.cxx  meson.build  test-pg_decode_array.c  test-pg_decode_array.cxx  test-pg_encode_array.c  test-pg_encode_array.cxx
test/: TestCronSchedule.cxx  http.cxx  meson.build
